# railify

./: .gitignore  README.md  filtered_simplified_graph.json  pyproject.toml
.devcontainer/: devcontainer.json
backend/: .gitignore  app.py  requirements.txt  requirments_2.txt
backend/annotations/L3_1/: L3_16902_Bernstein_page_1.xcf
backend/classical_image_recognition/: box_utilites.py  create_graph.py  create_graph_from_image.py  crop.py  line_manipulation.py  pipline.py  svg_generation.py  thicken.py
backend/deep_learning_approach/: detect.py  detect_only_box.py
backend/template_matching/: match.py
backend/utils/: file_to_img.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx  api.ts
