[tool.poetry]
name = "railify"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
certifi = "2024.8.30"
charset-normalizer = "3.4.0"
ci-info = "0.3.0"
click = "8.1.7"
configobj = "5.0.9"
configparser = "7.1.0"
contourpy = "1.3.0"
cycler = "0.12.1"
etelemetry = "0.3.1"
filelock = "3.16.1"
fitz = "0.0.1.dev2"
fonttools = "4.54.1"
httplib2 = "0.22.0"
idna = "3.10"
imageio = "2.36.0"
importlib-resources = "6.4.5"
isodate = "0.6.1"
kiwisolver = "1.4.7"
lazy-loader = "0.4"
looseversion = "1.3.0"
lxml = "5.3.0"
matplotlib = "3.9.2"
networkx = "3.4.2"
nibabel = "5.3.2"
nipype = "1.9.0"
numpy = "1.26.4"
opencv-python = "4.10.0.84"
packaging = "24.1"
pandas = "2.2.3"
pathlib = "1.0.1"
pdf2image = "1.17.0"
pillow = "11.0.0"
prov = "2.0.1"
puremagic = "1.28"
pydot = "3.0.2"
pymupdf = "1.24.13"
pyparsing = "3.2.0"
pypdf2 = "3.0.1"
pytesseract = "0.3.13"
python-dateutil = "2.9.0.post0"
pytz = "2024.2"
pyxnat = "1.6.2"
rdflib = "6.3.2"
requests = "2.32.3"
scikit-image = "0.24.0"
scipy = "1.14.1"
simplejson = "3.19.3"
six = "1.16.0"
svgwrite = "1.4.3"
tifffile = "2024.9.20"
traits = "6.4.3"
typing-extensions = "4.12.2"
tzdata = "2024.2"
urllib3 = "2.2.3"
flask = "^3.0.3"
flask-cors = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
